--- a/game.html
+++ b/game.html
@@ -112,7 +112,7 @@
 </head>
 <body>
 
-    <h1 id="turnMessage">xxx</h1> <!-- Messaggio del turno corrente -->
+    <h1 id="turnMessage">yyy</h1> <!-- Messaggio del turno corrente -->
 
     <div id="twistAgainText">LET'S TWIST AGAIN!</div>
 
@@ -245,31 +245,39 @@
             if (active === "start") {
                 startButton.disabled = false;
                 startButton.classList.remove("disabled");
-                startButton.style.color = 'black';
-                console.log ('xxx',    startButton.style.color);
+                startButton.style.background-color = 'red';
+              
                 pauseButton.disabled = true;
                 pauseButton.classList.add("disabled");
+                pauseButton.style.background-color = 'gray';
 
                 nextButton.disabled = true;
                 nextButton.classList.add("disabled");
+                nextButton.style.background-color = 'gray';
             } else if (active === "pause") {
                 startButton.disabled = true;
                 startButton.classList.add("disabled");
+                startButton.style.background-color = 'gray';
 
                 pauseButton.disabled = false;
                 pauseButton.classList.remove("disabled");
+                pauseButton.style.background-color = 'orange';
 
                 nextButton.disabled = true;
                 nextButton.classList.add("disabled");
+                nextButton.style.background-color = 'gray';
             } else if (active === "next") {
                 startButton.disabled = true;
                 startButton.classList.add("disabled");
-
+                startButton.style.background-color = 'gray';
+                
                 pauseButton.disabled = true;
                 pauseButton.classList.add("disabled");
+                pauseButton.style.background-color = 'gray';
 
                 nextButton.disabled = false;
                 nextButton.classList.remove("disabled");
+                nextButton.style.background-color = 'green';
             }
         }
 
