--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <script>
         const maxPlayers = 7;
         const minPlayers = 3;
-        const colors = ['#FF5733', '#33FF57', '#3357FF', '#FF33A1', '#FFC300', '#FF5733', '#581845'];
+        const colors = ['#FF5733', '#33FF57', '#3357FF', '#FF33A1', '#FFC300', '#cba39d', '#581845'];
         const players = [];
 
         const form = document.getElementById('playerForm');
