--- a/game.html
+++ b/game.html
@@ -112,7 +112,7 @@
 </head>
 <body>
 
-    <h1 id="turnMessage">yyy</h1> <!-- Messaggio del turno corrente -->
+    <h1 id="turnMessage"></h1> <!-- Messaggio del turno corrente -->
 
     <div id="twistAgainText">LET'S TWIST AGAIN!</div>
 
