--- a/game.html
+++ b/game.html
@@ -62,8 +62,8 @@
             top: 0;
             left: 50%;
             transform: translateX(-50%);
+            transform: translateY(-50%);
             width: 250px;
-            padding-top: 3em;
         }
 
         #twistAgainText {
