--- a/game.html
+++ b/game.html
@@ -159,7 +159,6 @@
 
         // Get players from localStorage
         const players = JSON.parse(localStorage.getItem('players'));
-        const playersStart = JSON.parse(localStorage.getItem('players'));
 
         // DOM Elements
         const startButton = document.getElementById("startButton");
@@ -232,8 +231,8 @@
 
         // Function to update the player's turn
         function updatePlayerTurn() {
-            currentPlayerIndex = (currentPlayerIndex + 1) % playersStart.length;
-            const currentPlayer = playersStart[currentPlayerIndex];
+            currentPlayerIndex = (currentPlayerIndex + 1) % players.length;
+            const currentPlayer = players[currentPlayerIndex];
             turnMessage.textContent = `${currentPlayer.name}, IT'S YOUR TURN!`;
             turnMessage.style.color = currentPlayer.color;
         }
