--- a/game.html
+++ b/game.html
@@ -4,124 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LET'S TWIST AGAIN!</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-            margin: 0;
-            text-align: center;
-        }
-
-        #turnMessage {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-        }
-
-        #countdown {
-            font-size: 5rem;
-            margin-bottom: 20px;
-            display: none;
-        }
-
-        .button {
-            font-size: 1.5rem;
-            padding: 10px 20px;
-            margin: 10px;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            position: absolute;
-            width: 100%;
-            height: 100%;
-        }
-
-        .button-container {
-            position: relative;
-            width: 150px;
-            height: 50px;
-        }
-
-        #startButton {
-            background-color: red;
-            color: white;
-        }
-
-        #nextButton {
-            background-color: green;
-            color: white;
-            display: none;
-        }
-
-        #twistGif {
-            display: none;
-            position: absolute;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 250px;
-        }
-
-        #twistAgainText {
-            font-size: 3rem;
-            color: red;
-            display: none;
-            margin-bottom: 20px;
-        }
-
-        #scoreboard {
-            margin-top: 20px;
-            width: 60%;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        th, td {
-            border: 1px solid black;
-            padding: 10px;
-            text-align: center;
-        }
-
-        th:first-child {
-            width: 10%;
-        }
-
-        .points-buttons {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-        }
-
-        @media (max-width: 768px) {
-            #turnMessage {
-                font-size: 2rem;
-            }
-
-            #countdown {
-                font-size: 5rem;
-            }
-
-            .button {
-                font-size: 1.2rem;
-                padding: 5px 15px;
-            }
-
-            #twistAgainText {
-                font-size: 2rem;
-            }
-
-            #twistGif {
-                width: 200px;
-            }
-        }
-    </style>
+     <link rel="stylesheet" href="letsTwistAgain.css">
 </head>
 <body>
 
