--- a/index.html
+++ b/index.html
@@ -4,64 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LET'S TWIST AGAIN!</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-        }
-
-        h1 {
-            font-size: 2rem;
-            margin-bottom: 20px;
-        }
-
-        form {
-            display: flex;
-            align-items: center;
-        }
-
-        input {
-            padding: 10px;
-            font-size: 1rem;
-            margin-right: 10px;
-            text-transform: uppercase; /* Questa riga forza l'uppercase */
-        }
-
-        button {
-            padding: 10px;
-            font-size: 1rem;
-            cursor: pointer;
-        }
-
-        table {
-            margin-top: 20px;
-            border-collapse: collapse;
-            width: 300px;
-        }
-
-        th, td {
-            border: 1px solid #000;
-            padding: 10px;
-            text-align: center;
-            font-size: 1.2rem;
-        }
-
-        #readyButton {
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 1.2rem;
-            display: none;
-            cursor: pointer;
-            background-color: #28a745;
-            color: white;
-            border: none;
-        }
-    </style>
+    <link rel="stylesheet" href="letsTwistAgain.css">
 </head>
 <body>
 
