--- a/game.html
+++ b/game.html
@@ -17,9 +17,12 @@
         <button id="nextButton" class="button">NEXT</button>
     </div>
 
-    <div id="countdown">20</div>
+    <div id="countdown-container"> <!-- Div aggiunto per lo spazio -->
+        <div id="countdown">20</div>
+    </div>
 
     <div id="scoreboard">
+        <h2>Scoreboard</h2>
         <table>
             <thead>
                 <tr>
@@ -30,6 +33,8 @@
             </thead>
             <tbody id="scoreboardBody"></tbody>
         </table>
+    </div>
+
     </div>
 
     <audio id="audioA" src="lets_twist_again.mp3"></audio>
