--- a/game.html
+++ b/game.html
@@ -161,6 +161,7 @@ function updateScoreboard() {
         `;
         scoreboardBody.appendChild(row);
     });
+    checkForWinner();
 }
 
 function addPoints(index) {
