--- a/game.html
+++ b/game.html
@@ -9,8 +9,8 @@
 <body>
 
   <div id="gif-container">
-    <img id="twistGif" src="twist.gif" alt="Twist GIF">
-    <div id="twistAgainText">LET'S TWIST AGAIN!</div>
+    <img id="twistGif" src="twist.gif" alt="Twist GIF" style="display:none">
+    <div id="twistAgainText"  style="display:none">>LET'S TWIST AGAIN!</div>
 </div>
     <h1 id="turnMessage"></h1>
 
